--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
   <body>
     <!-- this is the start of content -->
     <h1>
-      Hello 👋 Comp Sci !!!!
+      Hello 👋 Professor!
     </h1>
     <p>
-      This starter project gives you everything you need to start working on a new
-      website, and nothing more.
+     This is my first homework assignment for COMP 584. 
     </p>
+    <img src="./matador.png" alt="Matador Logo" class="matador" />
+    <p>And this is spinning Matador!</p>
   </body>
 </html>
